# freemen-printer-proxy

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  deploy-menu.sh  docker-compose.yml  package-lock.json  package.json  server.js
.github/workflows/: docker-publish.yml
apps/provisioner/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/provisioner/docs/: BUILD.md  CLOUDFLARE-FLOW.md  PI-SD-CARD.md  QA.md  ROADMAP.md
apps/provisioner/scripts/: dev-start.ps1
apps/provisioner/src/: App.tsx
apps/provisioner/src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
apps/provisioner/src-tauri/src/: main.rs
apps/provisioner/src/components/: ErrorBoundary.tsx
apps/provisioner/src/pages/: DiagnosticsPage.tsx  HomePage.tsx  PiSetupPage.tsx  ProvisionPage.tsx  SettingsPage.tsx  UbuntuDeployPage.tsx  WizardPage.tsx
apps/provisioner/src/services/: cloudflare.ts  config-generator.ts  device-package-generator.ts  file-operations.ts  http-client.ts  os-flash-service.ts  pi-setup-service.ts  sd-card-service.ts  ubuntu-deployment-service.ts
docs/: ARCHITECTURE.md  CLOUDFLARE_TUNNEL.md  DEVICE_PACKAGE.md  INSTALL_LINUX.md  INSTALL_RASPBERRY_PI.md  TROUBLESHOOTING.md  UPDATE.md
lib/: config.js  discovery.js  printer.js  printerModels.js  qrGenerator.js
middleware/: rateLimiter.js
public/: index.html
scripts/: doctor.sh  install-pi.sh  install.sh  update.sh
tools/provisioner/: index.js  package.json  provision.bat  provision.ps1
tools/provisioner/lib/: cloudflare.js  config-generator.js
(+52 files in other folders)
