[package]
name = "freemen-provisioner"
version = "1.0.0"
description = "Freemen Printer Proxy Provisioner"
authors = ["Freemen Solutions"]
license = "MIT"
repository = "https://github.com/freemen-solutions/freemen-printer-proxy"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "os-all", "clipboard-all", "dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
