[package]
name = "freemen-provisioner"
version = "1.0.0"
description = "Freemen Printer Proxy Provisioner"
authors = ["Freemen Solutions"]
license = "MIT"
repository = "https://github.com/freemen-solutions/freemen-printer-proxy"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "os-all", "clipboard-all", "dialog-all", "fs-all", "path-all", "shell-open", "window-all"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-crypt = "0.5"
xz2 = { version = "0.1", features = ["static"] }
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
